Fixing text overflow in card captions

--- a/pages/index.css
+++ b/pages/index.css
@@ -237,6 +237,9 @@ body {
   font-size: 1.5rem;
   font-weight: 900;
   line-height: 1.21;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__caption_like {
@@ -356,7 +359,7 @@ body {
     font-size: 1.37rem;
     font-weight: 500;
     line-height: 1.21;
-    margin: 30px 10px 14px 0;
+    margin: 30px 5px 14px 0;
     color: white;
   }
 
